--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AutoOL"]
 	path = AutoOL
-	url = https://github.com/olauncher/AutoOL.git
+	url = https://github.com/RagedMeteor1837/AutoOL.git
