--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,14 @@ jobs:
       with:
         submodules: recursive
         fetch-tags: true
-        fetch-depth: 1
+        fetch-depth: 0
         ref: ${{ github.ref }}
     - name: Git setup
-      run: git config --global commit.gpgsign false && git config --global user.email olauncher@example.com && git config --global user.name olauncher
+      run: |
+        git config --global commit.gpgsign false
+        git config --global user.email olauncher@example.com
+        git config --global user.name olauncher
+        git config --global core.autocrlf input
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
@@ -36,9 +40,31 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Set up OLauncher
-      run: bash decompile.sh && bash init.sh && bash applyPatches.sh
+      run: |
+        chmod +x ./*.sh || true
+        bash decompile.sh
+        bash init.sh
+        bash applyPatches.sh
+    - name: Compute versions
+      run: |
+        echo "OUTER_DESCR=$(git describe --tags --dirty --always || echo unknown)" >> $GITHUB_ENV
+        echo "OUTER_SHA=$(git rev-parse --short=12 HEAD)" >> $GITHUB_ENV
+        if [ -z "$(git status --porcelain)" ]; then echo "OUTER_DIRTY=clean" >> $GITHUB_ENV; else echo "OUTER_DIRTY=dirty" >> $GITHUB_ENV; fi
+        pushd olauncher >/dev/null
+        echo "INNER_DESCR=$(git describe --tags --dirty --always || echo unknown)" >> $GITHUB_ENV
+        echo "INNER_SHA=$(git rev-parse --short=12 HEAD)" >> $GITHUB_ENV
+        if [ -z "$(git status --porcelain)" ]; then echo "INNER_DIRTY=clean" >> $GITHUB_ENV; else echo "INNER_DIRTY=dirty" >> $GITHUB_ENV; fi
+        popd >/dev/null
     - name: Build with Maven
-      run: mvn --batch-mode --update-snapshots verify
+      working-directory: olauncher
+      run: |
+        mvn --batch-mode --update-snapshots verify \
+          -Douter.describe="${{ env.OUTER_DESCR }}" \
+          -Dinner.describe="${{ env.INNER_DESCR }}" \
+          -Douter.sha="${{ env.OUTER_SHA }}" \
+          -Dinner.sha="${{ env.INNER_SHA }}" \
+          -Douter.dirty="${{ env.OUTER_DIRTY }}" \
+          -Dinner.dirty="${{ env.INNER_DIRTY }}"
     - name: Generate redistributable
       run: bash genredist.sh
     - name: Upload redistributable
