--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,10 @@ jobs:
         bash decompile.sh
         bash init.sh
         bash applyPatches.sh
+    - name: Create local tags for versioning
+      run: |
+        git -C olauncher tag -a v2.0.0 -m "v2.0.0" || true
+        git tag -a v2.0.0 -m "v2.0.0" || true
     - name: Compute versions
       run: |
         echo "OUTER_DESCR=$(git describe --tags --dirty --always || echo unknown)" >> $GITHUB_ENV
