--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,11 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "cross-platform-builds" ]
     tags: [ "v*", "ci-test/**" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "cross-platform-builds" ]
 
 jobs:
   build:
@@ -45,10 +37,6 @@ jobs:
         bash decompile.sh
         bash init.sh
         bash applyPatches.sh
-    - name: Create local tags for versioning
-      run: |
-        git -C olauncher tag -a v2.1.3 -m "v2.1.3" || true
-        git tag -a v2.1.3 -m "v2.1.3" || true
     - name: Compute versions
       run: |
         echo "OUTER_DESCR=$(git describe --tags --dirty --always || echo unknown)" >> $GITHUB_ENV
@@ -78,24 +66,108 @@ jobs:
         name: OLauncher Redistributable JAR
         path: olauncher-*-redist.jar
 
+  package-windows:
+    runs-on: windows-latest
+    needs: build
+    outputs:
+      artifact-id: ${{ steps.upload-win.outputs.artifact-id }}
+    steps:
+      - name: Download redistributable jar
+        uses: actions/download-artifact@v4
+        with:
+          name: OLauncher Redistributable JAR
+          path: dist
+      - name: Set up JDK 21 (includes jpackage)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+      - name: Find redistributable JAR
+        id: jar
+        shell: bash
+        run: echo "JAR=$(ls dist/*-redist.jar | head -n1)" >> $GITHUB_OUTPUT
+      - name: Build EXE with jpackage
+        shell: bash
+        run: |
+          APP_VER="${GITHUB_REF_NAME#v}"
+          # If your JAR lacks a Main-Class manifest, add: --main-class fully.qualified.Main
+          jpackage \
+            --type exe \
+            --name "OLauncher" \
+            --app-version "${APP_VER:-0.0.0}" \
+            --input dist \
+            --main-jar "$(basename '${{ steps.jar.outputs.JAR }}')" \
+            --vendor "OLauncher" \
+            --dest . \
+            --win-dir-chooser \
+            --win-menu \
+            --win-shortcut
+      - name: Upload Windows installer
+        uses: actions/upload-artifact@v4
+        id: upload-win
+        with:
+          name: OLauncher Windows Installer
+          path: |
+            *.exe
+            *.msi
+          if-no-files-found: warn
+
+  package-macos:
+    runs-on: macos-latest
+    needs: build
+    outputs:
+      artifact-id: ${{ steps.upload-mac.outputs.artifact-id }}
+    steps:
+      - name: Download redistributable jar
+        uses: actions/download-artifact@v4
+        with:
+          name: OLauncher Redistributable JAR
+          path: dist
+      - name: Set up JDK 21 (includes jpackage)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+      - name: Find redistributable JAR
+        id: jar
+        run: echo "JAR=$(ls dist/*-redist.jar | head -n1)" >> $GITHUB_OUTPUT
+      - name: Build DMG with jpackage
+        run: |
+          APP_VER="${GITHUB_REF_NAME#v}"
+          # If your JAR lacks a Main-Class manifest, add: --main-class fully.qualified.Main
+          jpackage \
+            --type dmg \
+            --name "OLauncher" \
+            --app-version "${APP_VER:-0.0.0}" \
+            --input dist \
+            --main-jar "$(basename '${{ steps.jar.outputs.JAR }}')" \
+            --vendor "OLauncher" \
+            --dest .
+      - name: Upload macOS installer
+        uses: actions/upload-artifact@v4
+        id: upload-mac
+        with:
+          name: OLauncher macOS DMG
+          path: |
+            *.dmg
+          if-no-files-found: warn
+
   draft-release:
     if: ${{ github.ref_type == 'tag' }}
-    needs: build
+    needs: [build, package-windows, package-macos]
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Download redistributable jar
+      - name: Download all release artifacts
         uses: actions/download-artifact@v4
-        id: download-artifact
         with:
-          artifact-ids: ${{ needs.build.outputs.artifact-id }}
+          artifact-ids: ${{ needs.build.outputs.artifact-id }},${{ needs.package-windows.outputs.artifact-id }},${{ needs.package-macos.outputs.artifact-id }}
           merge-multiple: true
-          path: redist
-      - name: Create release draft with redistributable
+          path: release-assets
+      - name: Create release draft with JAR + installers
         env:
           RELEASE_TAG: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
-          ARTIFACT_PATH: ${{ steps.download-artifact.outputs.download-path }}
-        run: gh release create "$RELEASE_TAG" --draft --verify-tag --title "$RELEASE_TAG" "$ARTIFACT_PATH"/*.jar
+        run: gh release create "$RELEASE_TAG" --draft --verify-tag --title "$RELEASE_TAG" release-assets/*.{jar,exe,msi,dmg} || gh release upload "$RELEASE_TAG" release-assets/*.{jar,exe,msi,dmg}
