--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
     tags: [ "v*", "ci-test/**" ]
   pull_request:
     branches: [ "cross-platform-builds" ]
+  env:
+    APP_VER: "2.1.3"
+
 
 jobs:
   build:
@@ -86,26 +89,6 @@ jobs:
         id: jar
         shell: bash
         run: echo "JAR=$(ls dist/*-redist.jar | head -n1)" >> $GITHUB_OUTPUT
-        # Remove when finished
-      - name: Compute APP_VER
-        shell: bash
-        run: |
-          APP_VER="${GITHUB_REF_NAME#v}"
-
-          is_numeric_ver() {
-            [[ "$1" =~ ^[0-9]+(\.[0-9]+){0,2}$ ]]
-          }
-
-          if [[ "${GITHUB_REF_TYPE}" != "tag" || ! $(is_numeric_ver "$APP_VER") ]]; then
-            POM_VER=$(grep -m1 '<version>' olauncher/pom.xml | sed -E 's/.*<version>([^<]+).*/\1/')
-            if is_numeric_ver "$POM_VER"; then
-              APP_VER="$POM_VER"
-            else
-              APP_VER="0.0.${GITHUB_RUN_NUMBER}"
-            fi
-          fi
-
-          echo "APP_VER=$APP_VER" >> "$GITHUB_ENV"
       - name: Build EXE with jpackage
         shell: bash
         run: |
@@ -114,7 +97,7 @@ jobs:
           jpackage \
             --type exe \
             --name "OLauncher" \
-            --app-version "${APP_VER}" \
+            --app-version "${{ env.APP_VER }}" \            
             --input dist \
             --main-jar "$(basename '${{ steps.jar.outputs.JAR }}')" \
             --vendor "OLauncher" \
@@ -151,26 +134,6 @@ jobs:
       - name: Find redistributable JAR
         id: jar
         run: echo "JAR=$(ls dist/*-redist.jar | head -n1)" >> $GITHUB_OUTPUT
-      # Remove when finished
-      - name: Compute APP_VER
-        shell: bash
-        run: |
-          APP_VER="${GITHUB_REF_NAME#v}"
-
-          is_numeric_ver() {
-            [[ "$1" =~ ^[0-9]+(\.[0-9]+){0,2}$ ]]
-          }
-
-          if [[ "${GITHUB_REF_TYPE}" != "tag" || ! $(is_numeric_ver "$APP_VER") ]]; then
-            POM_VER=$(grep -m1 '<version>' olauncher/pom.xml | sed -E 's/.*<version>([^<]+).*/\1/')
-            if is_numeric_ver "$POM_VER"; then
-              APP_VER="$POM_VER"
-            else
-              APP_VER="0.0.${GITHUB_RUN_NUMBER}"
-            fi
-          fi
-
-          echo "APP_VER=$APP_VER" >> "$GITHUB_ENV"
       - name: Build DMG with jpackage
         run: |
           APP_VER="${GITHUB_REF_NAME#v}"
@@ -178,7 +141,7 @@ jobs:
           jpackage \
             --type dmg \
             --name "OLauncher" \
-            --app-version "${APP_VER}" \
+            --app-version "${{ env.APP_VER }}" \            
             --input dist \
             --main-jar "$(basename '${{ steps.jar.outputs.JAR }}')" \
             --vendor "OLauncher" \
