--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,21 @@ jobs:
       - name: Install Launch4j
         run: choco install -y launch4j
 
+      - name: Download Minecraft launcher JAR and extract icon
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p assets icons
+          curl -L -o minecraft-launcher.jar \
+            https://launcher.mojang.com/v1/objects/eabbff5ff8e21250e33670924a0c5e38f47c840b/launcher.jar
+          unzip -p minecraft-launcher.jar minecraft_logo.png > assets/minecraft_logo.png
+
+      - name: Make Windows .ico from PNG
+        shell: bash
+        run: |
+          choco install -y imagemagick
+          magick assets/minecraft_logo.png -resize 256x256 icons/OLauncher.ico
+
       - name: Write Launch4j config
         shell: bash
         run: |
@@ -91,6 +106,7 @@ jobs:
             <headerType>gui</headerType>
             <jar>dist/olauncher-2.1.3-redist.jar</jar>
             <outfile>OLauncher-${{ env.APP_VER }}.exe</outfile>
+            <icon>icons/OLauncher.ico</icon>
             <errTitle>OLauncher</errTitle>
             <chdir>.</chdir>
             <priority>normal</priority>
@@ -135,6 +151,32 @@ jobs:
           name: OLauncher Redistributable JAR
           path: dist
 
+      - name: Download Minecraft launcher JAR and extract icon
+        run: |
+          set -euo pipefail
+          mkdir -p assets
+          curl -L -o minecraft-launcher.jar \
+            https://launcher.mojang.com/v1/objects/eabbff5ff8e21250e33670924a0c5e38f47c840b/launcher.jar
+          unzip -p minecraft-launcher.jar minecraft_logo.png > assets/minecraft_logo.png
+
+      - name: Make macOS .icns from PNG
+        run: |
+          rm -rf icon.iconset OLauncher.icns
+          mkdir -p icon.iconset
+          SRC=assets/minecraft_logo.png
+          sips -z 16 16   "$SRC" --out icon.iconset/icon_16x16.png
+          sips -z 32 32   "$SRC" --out icon.iconset/icon_16x16@2x.png
+          sips -z 32 32   "$SRC" --out icon.iconset/icon_32x32.png
+          sips -z 64 64   "$SRC" --out icon.iconset/icon_32x32@2x.png
+          sips -z 128 128 "$SRC" --out icon.iconset/icon_128x128.png
+          sips -z 256 256 "$SRC" --out icon.iconset/icon_128x128@2x.png
+          sips -z 256 256 "$SRC" --out icon.iconset/icon_256x256.png
+          sips -z 512 512 "$SRC" --out icon.iconset/icon_256x256@2x.png
+          # Use the original as 512/1024 layers if high-res
+          cp "$SRC" icon.iconset/icon_512x512.png || true
+          cp "$SRC" icon.iconset/icon_512x512@2x.png || true
+          iconutil -c icns icon.iconset -o OLauncher.icns
+
       - name: Create .app
         run: |
           APP="OLauncher.app"
@@ -160,6 +202,7 @@ jobs:
           <plist version="1.0"><dict>
             <key>CFBundleName</key><string>OLauncher</string>
             <key>CFBundleDisplayName</key><string>OLauncher</string>
+            <key>CFBundleIconFile</key><string>OLauncher</string>
             <key>CFBundleIdentifier</key><string>com.olauncher.app</string>
             <key>CFBundleVersion</key><string>${APP_VER}</string>
             <key>CFBundleShortVersionString</key><string>${APP_VER}</string>
@@ -169,8 +212,8 @@ jobs:
           </dict></plist>
           PLIST
 
-          # Put JAR in Resources
           cp dist/olauncher-2.1.3-redist.jar "$APP/Contents/Resources/"
+          cp OLauncher.icns "OLauncher.app/Contents/Resources/OLauncher.icns"
 
       - name: Build DMG
         run: |
